--- a/examples/upbound-aws-provider/composite-resources/serverless-examples/sqs-lambda-s3/catalog-info.yaml
+++ b/examples/upbound-aws-provider/composite-resources/serverless-examples/sqs-lambda-s3/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${name}
+  name: lambdaSQS
   description: Serverless application with SQS → Lambda → S3
 spec:
   type: infrastructure
